chore: create docs.go for documentation
